fix anchor links spacing home page

--- a/src/styles/home/index_medium.css
+++ b/src/styles/home/index_medium.css
@@ -192,7 +192,7 @@ header img, .contact-cell img {
 }
 
 #about h2 {
-    padding-top: 2.5rem;
+    padding-top: 3rem;
 }
 
 #about p {
@@ -226,7 +226,7 @@ header img, .contact-cell img {
 }
 
 #values h2, #skills h2 {
-    padding-top: 5rem;
+    padding-top: 6.5rem;
 }
 
 #values blockquote, #values p {
